# data-parser

./: .gitignore  README.md  pyproject.toml
src/mcp_server_data_parser/: __init__.py  __main__.py  plot_handler.py  server.py  visualizations.py
tests/: test_server.py
