[project]
name = "mcp-server-data-parser"
version = "0.1.0"
description = "MCP server for parsing and analyzing CSV data"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "pandas>=2.2.3",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-data-parser = "mcp_server_data_parser:main"
