[project]
name = "mcp-server-data-parser"
version = "0.1.0"
description = "MCP server for parsing and analyzing CSV data"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.4",
    "mcp>=1.1.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]

[project.scripts]
mcp-server-data-parser = "mcp_server_data_parser:main"
